# AI-Work-5.4.26

./: .env.example  .gitignore  .gitkeep  README.md  pyproject.toml
src/agents/: __init__.py  base.py  cli.py  coco.py  orchestrator.py  rico.py  state.py  trevor.py
