[project]
name = "ai-work-crew"
version = "0.1.0"
description = "Three Claude-powered agents (Rico, Trevor, Coco) that help run an Etsy / dropshipping business."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
crew = "agents.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
